# ninja

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  configure.py
.github/workflows/: ci.yml  release.yml
script/: build.sh  docker.sh  install.sh
src/: build.h  disk_interface.cc  eval_env.cc  main.rs  manifest_parser_perf.cc  ninja.cc  ninja.rs  parser.cc  store.cc  store.h  tracer.cc  tracer.h  util.cc
src/arg/: arg.rs  arg_test.rs  mod.rs
src/config/: config.rs  config.yml  config_test.rs  mod.rs
src/ui/: mod.rs  ui.rs  ui_test.rs
src/util/: mod.rs  util.rs  util_test.rs
