[package]
name = "ninja"
version = "0.0.1"
edition = "2021"
rust-version = "1.59"
authors = ["Jia Jia <angersax@sina.com>"]
description = "A distributed build system"
repository = "https://github.com/distninja/ninja"
documentation = "https://github.com/distninja/ninja"
homepage = "https://github.com/distninja/ninja"
keywords = ["distributed", "build"]
categories = ["build"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[[bin]]
name = "ninja"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
clap = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tui = { version = "0.17", default-features = false, features = ["crossterm"]}

[badges]
maintenance = { status = "actively-developed" }
