[package]
name = "ninja"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
authors = ["Jia Jia <angersax@sina.com>"]
description = "A distributed build system"
repository = "https://github.com/distninja/ninja"
documentation = "https://github.com/distninja/ninja"
homepage = "https://github.com/distninja/ninja"
keywords = ["distributed", "build"]
categories = ["build"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[[bin]]
name = "ninja"
path = "src/ninja.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
clap = "3.0"
num_cpus = "1.13.1"
phf = { version = "0.11", features = ["macros"] }

[badges]
maintenance = { status = "actively-developed" }
